--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,5 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+.idea/.idea.EnRoute-Prototype-V1/.idea/workspace.xml
+.idea/.idea.EnRoute-Prototype-V1/.idea/projectSettingsUpdater.xml
